# Python-MTG-DB

./: .gitignore  CMakeLists.txt  README.md  info.txt  main.cpp  mtgwebapp.py  pyproject.toml  vcpkg.json  wsgi.py
mylibs/: DBhelperfunctions.py  celeryfunctions.py
requirements/: exampleenv.txt  systemctlservice.txt
static/css/: style.css
templates/: addcard.html  carddetails.html  cardsearch.html  deckbuilder.html  deckbuildernavbar.html  deckdetails.html  deletecardform.html  error.html  index.html  manualcardform.html  navigationbar.html  newdeck.html  scryfallcardform.html
